Added service configuration for "runit" init daemon and service configuration files