@@ -1,3 +1,7 @@
+#####################################
+### REPOSITORIES AND DEPENDENCIES ###
+#####################################
+
 # Repositories
 echo 'deb http://packages.debian.org jessie stable' >> /etc/apt/sources.list
 
@@ -43,6 +47,228 @@ apt-get install -qy --force-yes --no-install-recommends openjdk-8-jdk \
 
 # Install "less" (for easily reading/tailing files)
 apt-get install -qy --force-yes --no-install-recommends less
+
+
+
+#########################################
+### FILES, SERVICES AND CONFIGURATION ###
+#########################################
+
+# Configuring the "XVNC" service for the "runit" init daemon
+mkdir -p /etc/sv/Xvnc
+mkdir -p /etc/sv/Xvnc/log
+mkdir -p /var/log/Xvnc
+
+cat <<'EOT' > /etc/sv/Xvnc/run
+#!/bin/bash
+exec 2>&1
+WD=${WIDTH:-1280}
+HT=${HEIGHT:-720}
+
+exec /sbin/setuser nobody Xvnc4 :1 -geometry ${WD}x${HT} -depth 16 -rfbwait 30000 -SecurityTypes None -rfbport 5901 -bs -ac \
+				   -pn -fp /usr/share/fonts/X11/misc/,/usr/share/fonts/X11/75dpi/,/usr/share/fonts/X11/100dpi/ \
+				   -co /etc/X11/rgb -dpi 96
+EOT
+
+cat <<'EOT' > /etc/sv/Xvnc/log/run
+#!/bin/bash
+exec svlogd -tt /var/log/Xvnc
+EOT
+
+ln -s /etc/sv/Xvnc /etc/service/Xvnc
+
+# Configuring "xrdp" service for the "runit" init daemon
+mkdir -p /etc/sv/xrdp
+mkdir -p /etc/sv/xrdp/log
+mkdir -p /var/log/xrdp
+
+cat <<'EOT' > /etc/sv/xrdp/run
+#!/bin/bash
+exec 2>&1
+RSAKEYS=/etc/xrdp/rsakeys.ini
+    # Check for rsa key
+    if [ ! -f $RSAKEYS ] || cmp $RSAKEYS /usr/share/doc/xrdp/rsakeys.ini > /dev/null; then
+        echo "Generating xrdp RSA keys..."
+        (umask 077 ; xrdp-keygen xrdp $RSAKEYS)
+        chown root:root $RSAKEYS
+        if [ ! -f $RSAKEYS ] ; then
+            echo "could not create $RSAKEYS"
+            exit 1
+        fi
+        echo "done"
+    fi
+exec /usr/sbin/xrdp --nodaemon
+EOT
+
+cat <<'EOT' > /etc/sv/xrdp/log/run
+#!/bin/bash
+exec svlogd -tt /var/log/xrdp
+EOT
+
+ln -s /etc/sv/xrdp /etc/services/xrdp
+
+# Providing a custom "Xrdp" configuration file "xrdp.ini"
+cat <<'EOT' > /etc/xrdp/xrdp.ini
+[globals]
+bitmap_cache=yes
+bitmap_compression=yes
+port=3389
+allow_channels=true
+max_bpp=16
+fork=yes
+crypt_level=low
+security_layer=rdp
+tcp_nodelay=yes
+tcp_keepalive=yes
+blue=009cb5
+grey=dedede
+autorun=xrdp1
+bulk_compression=yes
+new_cursors=yes
+use_fastpath=both
+hidelogwindow=yes
+
+[xrdp1]
+name=GUI_APPLICATION
+lib=libvnc.so
+username=nobody
+password=PASSWD
+ip=127.0.0.1
+port=5901
+
+[channels]
+rdpdr=true
+rdpsnd=true
+drdynvc=true
+cliprdr=true
+rail=true
+EOT
+
+# Configuring "xrdp-sesman" service for the "runit" init daemon
+mkdir -p /etc/sv/xrdp-sesman
+mkdir -p /etc/sv/xrdp-sesman/log
+mkdir -p /var/log/xrdp-sesman
+
+cat <<'EOT' > /etc/sv/xrdp-sesman/run
+#!/bin/bash
+exec 2>&1
+
+exec /usr/sbin/xrdp-sesman --nodaemon >> /var/log/xrdp-sesman_run.log 2>&1
+EOT
+
+cat <<'EOT' > /etc/sv/xrdp-sesman/log/run
+#!/bin/bash
+exec svlogd -tt /var/log/xrdp-sesman
+EOT
+
+ln -s /etc/sv/xrdp-sesman /etc/service/xrdp-sesman
+
+# Providing a custom "sesman" configuration file "sesman.ini"
+cat <<'EOT' > /etc/xrdp/sesman.ini
+[Globals]
+ListenAddress=127.0.0.1
+ListenPort=3350
+EnableUserWindowManager=1
+UserWindowManager=startwm.sh
+DefaultWindowManager=startwm.sh
+
+[Security]
+AllowRootLogin=1
+MaxLoginRetry=4
+TerminalServerUsers=tsusers
+TerminalServerAdmins=tsadmins
+AlwaysGroupCheck = false
+
+[Sessions]
+X11DisplayOffset=10
+MaxSessions=1
+KillDisconnected=0
+IdleTimeLimit=0
+DisconnectedTimeLimit=0
+Policy=Default
+
+[Logging]
+LogFile=xrdp-sesman.log
+LogLevel=DEBUG
+EnableSyslog=1
+SyslogLevel=DEBUG
+
+[Xvnc]
+param1=-bs
+param2=-ac
+param5=-localhost
+param6=-dpi
+param7=96
+EOT
+
+# Configuring "openbox" window manager service for the "runit" init daemon
+mkdir -p /etc/sv/openbox
+mkdir -p /etc/sv/openbox/log
+mkdir -p /var/log/openbox
+
+cat <<'EOT' > /etc/sv/openbox/run
+#!/bin/bash
+exec 2>&1
+
+exec env DISPLAY=:1 HOME=/nobody /sbin/setuser nobody  /usr/bin/openbox-session
+EOT
+
+cat <<'EOT' > /etc/sv/openbox/log/run
+#!/bin/bash
+exec 2>&1
+exec svlogd -tt /var/log/openbox
+EOT
+
+ln -s /etc/sv/openbox /etc/service/openbox
+
+# Configuring "Tomcat 8" servlet container for the "runit" init daemon
+mkdir -p /etc/sv/tomcat8
+mkdir -p /etc/sv/tomcat8/log
+
+cat <<'EOT' > /etc/sv/tomcat8/run
+#!/bin/bash
+exec 2>&1
+
+touch /var/lib/tomcat8/logs/catalina.out
+
+cd /var/lib/tomcat8
+
+exec /usr/bin/java -Djava.util.logging.config.file=/var/lib/tomcat8/conf/logging.properties \
+                   -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
+                   -Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC \
+                   -Djava.endorsed.dirs=/usr/share/tomcat8/endorsed \
+                   -classpath /usr/share/tomcat8/bin/bootstrap.jar:/usr/share/tomcat8/bin/tomcat-juli.jar \
+                   -Dcatalina.base=/var/lib/tomcat8 -Dcatalina.home=/usr/share/tomcat8 \
+                   -Djava.io.tmpdir=/tmp/tomcat8-tomcat8-tmp org.apache.catalina.startup.Bootstrap start
+EOT
+
+cat <<'EOT' > /etc/sv/tomcat8/log/run
+#!/bin/bash
+exec svlogd -tt /var/log/tomcat8
+EOT
+
+ln -s /etc/sv/tomcat8 /etc/service/tomcat8
+
+# Configuring "Guacamole" proxy server for "runit" init daemon
+mkdir -p /etc/sv/guacd
+mkdir -p /etc/sv/guacd/log
+mkdir -p /var/log/guacd
+
+cat <<'EOT' > /etc/sv/guacd/run
+#!/bin/bash
+exec 2>&1
+
+exec /usr/sbin/guacd -f
+EOT
+
+cat <<'EOT' > /etc/sv/guacd/log/run
+#!/bin/bash
+exec svlogd -tt /var/log/guacd
+EOT
+
+ln -s /etc/sv/guacd /etc/service/guacd
+
+
 
 # Python Skripten bereitstellen
 # /sbin/setuser und /sbin/my_init (launched when the container is started)
